best-practices/require_labels/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../require_labels.yaml
assert:
- policy-assert.yaml
unitTest: false
