best-practices/require_labels/e2e/02-install-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../resource.yaml
assert:
- policy-report-assert.yaml
unitTest: false
