best-practices/require_labels/e2e/04-policy-report.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- policy-report-assert.yaml
unitTest: false
