best-practices/require_labels/e2e/policy-report-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  name: cpol-require-labels
  namespace: default
summary:
  error: 0
  fail: 2
  pass: 2
  skip: 0
  warn: 0
